force-app/main/default/objects/AIChatCommand__mdt/fields/AgentDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>AgentDeveloperName__c</fullName>
    <description>Limits this command to one AI Agent, by its AIAgent__c.DeveloperName__c (a name rather than an Id, so the record works in every org). Blank offers it with every Agent.</description>
    <inlineHelpText>Enter an AI Agent&apos;s Developer Name to offer this command only with that Agent, or leave blank for all Agents.</inlineHelpText>
    <label>Agent Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>