force-app/main/default/objects/AIChatCommand__mdt/fields/AvailableTo__c.field-meta.xml
<CustomField>
    <fullName>AvailableTo__c</fullName>
    <description>Who can see and use this command, by the user&apos;s AI Assist User Type (User.AIAssistUserType__c). Each level includes the ones above it.</description>
    <inlineHelpText>All Users: everyone with AI Assist. Super Users and Admins: Super User or Admin user types. Admins Only: Admin user type.</inlineHelpText>
    <label>Available To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Users</fullName>
                <default>true</default>
                <label>All Users</label>
            </value>
            <value>
                <fullName>Super Users and Admins</fullName>
            </value>
            <value>
                <fullName>Admins Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>