force-app/main/default/objects/AIChatCommand__mdt/fields/Command__c.field-meta.xml
<CustomField>
    <fullName>Command__c</fullName>
    <description>The command the user types, including the leading slash - letters, numbers, hyphens and underscores only (for example /risk-check).</description>
    <inlineHelpText>Enter the command with its leading slash, such as /risk-check. No spaces.</inlineHelpText>
    <label>Command</label>
    <length>41</length>
    <required>true</required>
    <type>Text</type>
</CustomField>