force-app/main/default/objects/AIChatCommand__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>One line shown under the command in the chat window&apos;s command list and on the new-conversation screen.</description>
    <inlineHelpText>Describe what the command does in a few words, such as &quot;Flag risks to the close date&quot;.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>