force-app/main/default/objects/AIChatCommand__mdt/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description>Sort order in the command list and new-conversation suggestions - lowest first. Blank sorts last.</description>
    <inlineHelpText>Lower numbers appear first. The first three for an object are suggested on a new conversation.</inlineHelpText>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>