force-app/main/default/objects/AIChatCommand__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active commands are offered in the chat window.</description>
    <inlineHelpText>Turn this off to hide the command without deleting it.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>