force-app/main/default/objects/AIChatCommand__mdt/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <description>The object whose record pages offer this command. Blank offers it on any record.</description>
    <inlineHelpText>Enter an object API name such as Opportunity, or leave blank for any record.</inlineHelpText>
    <label>Object API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>