force-app/main/default/objects/AIChatCommand__mdt/fields/PromptText__c.field-meta.xml
<CustomField>
    <fullName>PromptText__c</fullName>
    <description>The instructions sent to the AI model when the command is used. Never shown to the user. Read with SOQL - Custom Metadata getAll()/getInstance() cut Long Text Area values off at 255 characters.</description>
    <inlineHelpText>Write the full instruction the AI should follow for this command.</inlineHelpText>
    <label>Prompt Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>