force-app/main/default/objects/AIChatCommand__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Command__c</columns>
    <columns>IsActive__c</columns>
    <columns>AvailableTo__c</columns>
    <columns>ObjectAPIName__c</columns>
    <columns>AgentDeveloperName__c</columns>
    <columns>DisplayOrder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>